@@ -83,6 +83,8 @@ By DamienMcKenna: Ensure all ksort() calls only happen on arrays.
 By DamienMcKenna: Properly formatted all comments in the main module file.
 #2659820 by msti, DamienMcKenna, dgtlmoon, lotyrin: Refactored hook_schema to be
   more normal, fixed MySQL 5.7 compatibility problems.
+#2136205 by Scott Robertson, DamienMcKenna: When using Content Translation to
+  translate a panelized node, clone the Panelizer configuration.
 
 
 Panelizer 7.x-3.2-beta1, 2015-02-02
